# geompp

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: border.hpp  line.hpp  point.hpp  range.hpp  rect.hpp
tests/: range.cpp
